--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -37,7 +37,7 @@ It contains meta-information lines (prefixed with "\#\#"), a header
 line (prefixed with "\#"), and data lines
 each containing information about a position in the genome and genotype
 information on samples for each position
-(text fields separated by tabs). Zero length fields are not allowed, a dot (".") should
+(text fields separated by tabs). Zero length fields are not allowed, a dot (".") must
 be used instead.
 In order to ensure interoperability across platforms, VCF compliant implementations must support
 both LF (\texttt{\textbackslash n}) and CR+LF (\texttt{\textbackslash r\textbackslash n}) newline conventions.  
@@ -112,8 +112,8 @@ are disallowed in both VCF and BCF, see \ref{BcfTypeEncoding}.
 File meta-information is included after the \#\# string and must be key=value
 pairs. Meta-information lines are optional, but if they are present then
 they must be completely well-formed. Note that BCF, the binary
-counterpart of VCF, requires that all entries are present.  It is strongly
-encouraged to include meta-information lines describing the entries used in the
+counterpart of VCF, requires that all entries are present.  It is recommended
+to include meta-information lines describing the entries used in the
 body of the VCF file.
 
 All structured lines that have their value enclosed within "$<>$" require an ID
@@ -123,10 +123,10 @@ which must be unique within their type. For all of the structured lines (\#\#INF
 ##INFO=<ID=ID,Number=number,Type=type,Description="description",Source="description",Version="128">
 \end{verbatim}
 In the above example, the extra fields of ``Source'' and ``Version'' are
-provided. Optional fields should be stored as strings even for numeric values.
+provided. Optional fields must be stored as strings even for numeric values.
 
-It is highly recommended (but not required) that the header
-include tags describing the reference and contigs backing the data contained in
+It is recommended in VCF and required in BCF that the header
+includes tags describing the reference and contigs backing the data contained in
 the file.  These tags are based on the SQ field from the SAM spec; all tags are
 optional (see the VCF example above).
 
@@ -135,7 +135,7 @@ which must come first.
 
 
 \subsubsection{File format}
-A single `fileformat' line is always required, must be the first line in the file, and details the VCF format version number. For VCF version 4.3, this line should read:
+A single `fileformat' line is always required, must be the first line in the file, and details the VCF format version number. For VCF version 4.3, this line is:
 
 \begin{verbatim}
 ##fileformat=VCFv4.3
@@ -144,7 +144,7 @@ A single `fileformat' line is always required, must be the first line in the fil
 
 
 \subsubsection{Information field format}
-INFO fields should be described as follows (first four keys are required, source and version are recommended):
+INFO fields are described as follows (first four keys are required, source and version are recommended):
 
 \begin{verbatim}
 ##INFO=<ID=ID,Number=number,Type=type,Description="description",Source="source",Version="version">
@@ -154,28 +154,28 @@ Possible Types for INFO fields are: Integer, Float, Flag, Character, and
 String. 
 The Number entry is an Integer that describes the number of values that
 can be included with the INFO field. For example, if the INFO field contains a
-single number, then this value should be $1$; if the INFO field describes a
-pair of numbers, then this value should be $2$ and so on. There are also
+single number, then this value must be $1$; if the INFO field describes a
+pair of numbers, then this value must be $2$ and so on. There are also
 certain special characters used to define special cases:
 
 \begin{itemize}
-  \item If the field has one value per alternate allele then this value should be `A'.
-  \item If the field has one value for each possible allele (including the reference), then this value should be `R'.
-  \item If the field has one value for each possible genotype (more relevant to the FORMAT tags) then this value should be `G'.
-  \item If the number of possible values varies, is unknown, or is unbounded, then this value should be `.'.
+  \item If the field has one value per alternate allele then this value must be `A'.
+  \item If the field has one value for each possible allele (including the reference), then this value must be `R'.
+  \item If the field has one value for each possible genotype (more relevant to the FORMAT tags) then this value must be `G'.
+  \item If the number of possible values varies, is unknown, or is unbounded, then this value must be `.'.
 \end{itemize}
 
-The `Flag' type indicates that the INFO field does not contain a Value entry, and hence the Number should be $0$ in this case. The Description value must be surrounded by double-quotes. Double-quote character can be escaped with backslash $\backslash$ and backslash as $\backslash\backslash$. Source and Version values likewise should be surrounded by double-quotes and specify the annotation source (case-insensitive, e.g. ``dbsnp'') and exact version (e.g. ``138''), respectively for computational use.
+The `Flag' type indicates that the INFO field does not contain a Value entry, and hence the Number must be $0$ in this case. The Description value must be surrounded by double-quotes. Double-quote character must be escaped with backslash $\backslash$ and backslash as $\backslash\backslash$. Source and Version values likewise must be surrounded by double-quotes and specify the annotation source (case-insensitive, e.g. ``dbsnp'') and exact version (e.g. ``138''), respectively for computational use.
 
 \subsubsection{Filter field format}
-FILTERs that have been applied to the data should be described as follows:
+FILTERs that have been applied to the data are described as follows:
 
 \begin{verbatim}
 ##FILTER=<ID=ID,Description="description">
 \end{verbatim}
 
 \subsubsection{Individual format field format}
-Likewise, Genotype fields specified in the FORMAT field should be described as follows:
+Genotype fields specified in the FORMAT field are described as follows:
 
 \begin{verbatim}
 ##FORMAT=<ID=ID,Number=number,Type=type,Description="description">
@@ -184,7 +184,7 @@ Likewise, Genotype fields specified in the FORMAT field should be described as f
 Possible Types for FORMAT fields are: Integer, Float, Character, and String (this field is otherwise defined precisely as the INFO field).
 
 \subsubsection{Alternative allele field format}
-Symbolic alternate alleles should be described as follows:
+Symbolic alternate alleles are described as follows:
 \begin{verbatim}
 ##ALT=<ID=type,Description=description>
 \end{verbatim}
@@ -193,7 +193,7 @@ Symbolic alternate alleles should be described as follows:
 In symbolic alternate alleles for imprecise structural variants,
 the ID field indicates the type of structural variant, and can be a
 colon-separated list of types and subtypes. ID values are case sensitive
-strings and may not contain whitespace or angle brackets. The first level type
+strings and must not contain whitespace or angle brackets. The first level type
 must be one of the following:
 \begin{itemize}
   \item DEL Deletion relative to the reference
@@ -230,8 +230,8 @@ The URL field specifies the location of a fasta file containing breakpoint assem
 
 \subsubsection{Contig field format}
 \label{sec-contig-field}
-It is highly recommended (and required for BCF) that the header includes tags
-describing the contigs referred to in the VCF file. The structured \texttt{contig}
+It is recommended for VCF, and required for BCF, that the header includes tags
+describing the contigs referred to in the file. The structured \texttt{contig}
 field must include the ID attribute and typically includes also
 sequence length, MD5 checksum, URL tag to indicate where the sequence can be
 found, etc. For example: 
@@ -292,16 +292,16 @@ and there must be no tab characters at the end of the line.
 
 \subsection{Data lines}
 All data lines are tab-delimited
-with no tab character at the end of the line. The last data line should end with a line separator. In all cases,
+with no tab character at the end of the line. The last data line must end with a line separator. In all cases,
 missing values are specified with a dot (`.').
 
 \subsubsection{Fixed fields}
 There are 8 fixed fields per record.  Fixed fields are:
 
 \begin{enumerate}
-  \item CHROM - chromosome: An identifier from the reference genome or an angle-bracketed ID String (``$<$ID$>$'') pointing to a contig in the assembly file (cf. the \#\#assembly line in the header). All entries for a specific CHROM should form a contiguous block within the VCF file. The colon symbol (:) must be absent from all chromosome names to avoid parsing errors when dealing with breakends. (String, no white-space permitted, Required).
+  \item CHROM - chromosome: An identifier from the reference genome or an angle-bracketed ID String (``$<$ID$>$'') pointing to a contig in the assembly file (cf. the \#\#assembly line in the header). All entries for a specific CHROM must form a contiguous block within the VCF file. The colon symbol (:) must be absent from all chromosome names to avoid parsing errors when dealing with breakends. (String, no white-space permitted, Required).
   \item POS - position: The reference position, with the 1st base having position 1. Positions are sorted numerically, in increasing order, within each reference sequence CHROM.   It is permitted to have multiple records with the same POS. Telomeres are indicated by using positions 0 or N+1, where N is the length of the corresponding chromosome or contig.   (Integer, Required)
-  \item ID - identifier: Semi-colon separated list of unique identifiers where available. If this is a dbSNP variant it is encouraged to use the rs number(s). No identifier should be present in more than one data record. If there is no identifier available, then the missing value should be used. (String, no white-space or semi-colons permitted, duplicate values not allowed.)
+  \item ID - identifier: Semi-colon separated list of unique identifiers where available. If this is a dbSNP variant the rs number(s) should be used. No identifier should be present in more than one data record. If there is no identifier available, then the missing value should be used. (String, no white-space or semi-colons permitted, duplicate values not allowed.)
   \item REF - reference base(s): Each base must be one of A,C,G,T,N (case
   insensitive). Multiple bases are permitted. The value in the POS field refers
   to the position of the first base in the String. For simple insertions and
@@ -323,9 +323,9 @@ There are 8 fixed fields per record.  Fixed fields are:
   (thus R as a reference base is converted to A in VCF.)
 
 
-  \item ALT - alternate base(s): Comma separated list of alternate non-reference alleles.  These alleles do not have to be called in any of the samples. Options are base Strings made up of the bases A,C,G,T,N,*, (case insensitive) or an angle-bracketed ID String (``$<$ID$>$'') or a breakend replacement string as described in the section on breakends. The `*' allele is reserved to indicate that the allele is missing due to a an overlapping deletion. If there are no alternative alleles, then the missing value should be used.  Tools processing VCF files are not required to preserve case in the allele String, except for IDs, which are case sensitive.  (String; no whitespace, commas, or angle-brackets are permitted in the ID String itself)
-  \item QUAL - quality: Phred-scaled quality score for the assertion made in ALT. i.e. $-10log_{10}$ prob(call in ALT is wrong). If ALT is `.' (no variant) then this is $-10log_{10}$ prob(variant), and if ALT is not `.' this is $-10log_{10}$ prob(no variant). If unknown, the missing value should be specified. (Float)
-  \item FILTER - filter status: PASS if this position has passed all filters, i.e. a call is made at this position. Otherwise, if the site has not passed all filters, a semicolon-separated list of codes for filters that fail. e.g. ``q10;s50'' might indicate that at this site the quality is below 10 and the number of samples with data is below 50\% of the total number of samples. `0' is reserved and should not be used as a filter String. If filters have not been applied, then this field should be set to the missing value. (String, no white-space or semi-colons permitted, duplicate values not allowed.)
+  \item ALT - alternate base(s): Comma separated list of alternate non-reference alleles.  These alleles do not have to be called in any of the samples. Options are base Strings made up of the bases A,C,G,T,N,*, (case insensitive) or an angle-bracketed ID String (``$<$ID$>$'') or a breakend replacement string as described in the section on breakends. The `*' allele is reserved to indicate that the allele is missing due to a an overlapping deletion. If there are no alternative alleles, then the missing value must be used.  Tools processing VCF files are not required to preserve case in the allele String, except for IDs, which are case sensitive.  (String; no whitespace, commas, or angle-brackets are permitted in the ID String itself)
+  \item QUAL - quality: Phred-scaled quality score for the assertion made in ALT. i.e. $-10log_{10}$ prob(call in ALT is wrong). If ALT is `.' (no variant) then this is $-10log_{10}$ prob(variant), and if ALT is not `.' this is $-10log_{10}$ prob(no variant). If unknown, the missing value must be specified. (Float)
+  \item FILTER - filter status: PASS if this position has passed all filters, i.e. a call is made at this position. Otherwise, if the site has not passed all filters, a semicolon-separated list of codes for filters that fail. e.g. ``q10;s50'' might indicate that at this site the quality is below 10 and the number of samples with data is below 50\% of the total number of samples. `0' is reserved and must not be used as a filter String. If filters have not been applied, then this field must be set to the missing value. (String, no white-space or semi-colons permitted, duplicate values not allowed.)
   \item INFO - additional information: (String, no semi-colons or
   equals-signs permitted; commas are permitted only as delimiters for lists of
   values; characters with special meaning can be encoded using the percent encoding, see Section~\ref{character-encoding}; space characters are allowed)
@@ -357,7 +357,7 @@ There are 8 fixed fields per record.  Fixed fields are:
 \end{itemize}
 \end{enumerate}
 The exact format of each INFO sub-field should be specified in the meta-information (as described above).
-Example for an INFO field: DP=154;MQ=52;H2. Keys without corresponding values are allowed in order to indicate group membership (e.g. H2 indicates the SNP is found in HapMap 2). It is not necessary to list all the properties that a site does NOT have, by e.g. H2=0. See below for additional reserved INFO sub-fields used to encode structural variants.
+Example for an INFO field: DP=154;MQ=52;H2. Keys without corresponding values may be used to indicate group membership (e.g. H2 indicates the SNP is found in HapMap 2). See below for additional reserved INFO sub-fields used to encode structural variants.
 \subsubsection{Genotype fields}
 If genotype information is present, then the same types of data must be present
 for all samples. First a FORMAT field is given specifying the data types and
@@ -376,7 +376,7 @@ As with the INFO field, there are several common, reserved keywords that are sta
   \item FT : sample genotype filter indicating if this genotype was ``called'' (similar in concept to the FILTER field). Again, use PASS to indicate that all filters have been passed, a semi-colon separated list of codes for filters that fail, or `.' to indicate that filters have not been applied. These values should be described in the meta-information in the same way as FILTERs (String, no white-space or semi-colons permitted)
   \item GQ : conditional genotype quality, encoded as a phred quality $-10log_{10}$ p(genotype call is wrong, conditioned on the site's being variant) (Integer)
   \item GP : genotype posterior probabilities in the range 0 to 1 using the same ordering as the GL field; one use can be to store imputed genotype probabilities (Float)
-  \item GT : genotype, encoded as allele values separated by either of $/$ or $\mid$. The allele values are 0 for the reference allele (what is in the REF field), 1 for the first allele listed in ALT, 2 for the second allele list in ALT and so on. For diploid calls examples could be $0/1$, $1\mid0$, or $1/2$, etc. For haploid calls, e.g. on Y, male non-pseudoautosomal X, or mitochondrion, only one allele value should be given; a triploid call might look like $0/0/1$. If a call cannot be made for a sample at a given locus, `.' should be specified for each missing allele in the GT field (for example `$./.$' for a diploid genotype and `.' for haploid genotype). The meanings of the separators are as follows (see the PS field below for more details on incorporating phasing information into the genotypes):
+  \item GT : genotype, encoded as allele values separated by either of $/$ or $\mid$. The allele values are 0 for the reference allele (what is in the REF field), 1 for the first allele listed in ALT, 2 for the second allele list in ALT and so on. For diploid calls examples could be $0/1$, $1\mid0$, or $1/2$, etc. Haploid calls, e.g. on Y, male non-pseudoautosomal X, or mitochondrion, are indicated by having only one allele value. A triploid call might look like $0/0/1$. If a call cannot be made for a sample at a given locus, `.' must be specified for each missing allele in the GT field (for example `$./.$' for a diploid genotype and `.' for haploid genotype). The meanings of the separators are as follows (see the PS field below for more details on incorporating phasing information into the genotypes):
 	\begin{itemize}
 	  \item $/$ : genotype unphased
 	  \item $\mid$ : genotype phased
