--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -243,6 +243,13 @@ meanings can be avoided.}
         program in that {\tt PG} record, and the program(s) referred to via the {\tt PP} tag. \\\cline{2-3}
   & {\tt DS} & Description.\\\cline{2-3}
   & {\tt VN} & Program version \\\cline{1-3}
+  \multicolumn{2}{|l}{\tt @TG} & Optional alignment tag declaration. \\\cline{2-3}
+  & {\tt ID}* & Tag ID used in this file. \emph{Format} {\tt /\^{}[A-Za-z][A-Za-z0-9]\$/}. \\\cline{2-3}
+  & {\tt UU}* & Unique identifier. \\\cline{2-3}
+  & {\tt TP} & Content type.  \emph{Format} {\tt /\^{}[AifZHB]\$/}. \\\cline{2-3}
+  & {\tt UR} & URI giving a canonical definition of the tag. \\\cline{2-3}
+  & {\tt DS} & Short description \\\cline{2-3}
+  & {\tt DI} & Originally desired Tag ID, for information only. \emph{Format} { \tt /\^{}[A-Za-z][A-Za-z0-9]\$/}. \\\cline{1-3}
   \multicolumn{2}{|l}{\tt @CO} & One-line text comment. Unordered multiple {\tt @CO} lines are allowed.\\
   \cline{1-3}
 \end{longtable}
@@ -426,6 +433,7 @@ Each bit is explained in the following table:
 \subsection{The alignment section: optional fields}\label{sec:alnaux}
 All optional fields follow the {\tt TAG:TYPE:VALUE} format
 where {\tt TAG} is a two-character string that matches {\tt /[A-Za-z][A-Za-z0-9]/}.
+All {\tt TAG} identifiers MUST be declared in a header {\tt @TG} record.
 Each {\tt TAG} can only appear once in one alignment line. A {\tt TAG}
 containing lowercase letters are reserved for end users.
 In an optional field, {\tt TYPE} is a single case-sensitive letter which
